test/scc_test/exp/semantic-errors/037.t
void test()
{
    void* a;
    a *= 2;
}